# bas-metadata-standards

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  app.py  datacite-example-pdc.xml  decisions.md  dms-markedup-full.html  docker-compose.yml  gulpfile.js  index.html  iso-gemini-example-eidc.xml  iso-gemini-example.xml  iso-pdc-example.xml  iso-pdc-resolved-example-inspire-validator.xml  iso-pdc-resolved-example-medin-nerc.xml  iso-pdc-resolved-example-medin.xml  iso-pdc-resolved-example.xml  manage.py  medin-minimal-test-case-keyword.xml  metadata_record_configs.py  package.json  requirements.txt  schema-dot-org-dataset-example-eidc.json  schema-dot-org-dataset-example-pdc-datacite.json
site/: _config.yml  about.md  feedback.md  index.html  index.md  pyproject.toml
site/_data/: menus.yml
site/_profile/: gemini.md  inspire.md  medin.md  uk-pdc-discovery.md
site/_standard/: IEC-61174.md  iso-19115-19139.md  iso-19115.md
site/css/: main.scss
site/legal/: cookies.md  copyright.md  privacy.md
site/src/: app.py  build.py
site/src/pages/: index.md
site/src/pages/legal/: accessibility.md  cookies.md  copyright.md  (+1 more)
site/src/styles/: main.css.j2
site/src/templates/: footer.html  header.html  layout.html  sidebar.html  toc.html
site/static/example-records/: ad7d345a-0650-4f44-b7eb-c48e1999086b-html.xml  ad7d345a-0650-4f44-b7eb-c48e1999086b-rubric.xml  ad7d345a-0650-4f44-b7eb-c48e1999086b.xml  bc71347d-298a-4df3-88b0-cb9a908db166-html.xml  bc71347d-298a-4df3-88b0-cb9a908db166-rubric.xml  bc71347d-298a-4df3-88b0-cb9a908db166.xml
(+86 files in other folders)
