[project]
name = "metadata-standards-site"
version = "0.1.0"
description = "Mininmal static site generator for BAS metadata standards website."
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "flask-file-routes>=0.3.2",
    "frozen-flask>=1.0.2",
    "markdown-gfm-admonition>=0.3.0",
]
